010-08-10  Ramon Novoa  <rnovoa@artica.es>

	* include/auth/mysql.php, include/functions_config.php,
	  include/config_process.php, pandora_console.spec,
	  ajax.php, godmode/menu.php: Added support for different
	  authentication schemes. Local database and LDAP are
	  implemented.

	* operation/agentes/networkmap.topology.php,
	  operation/agentes/networkmap.groups.php: Small fixes. Use filter name
	  to compose file names.

2010-08-09  Sergio Martin <sergio.martin@artica.es>

	* extensions/agents_modules.php: Fixed the horizontal 
	pagination to keep the vertical pagination when navigate

2010-08-09  Sergio Martin <sergio.martin@artica.es>

	* extensions/agents_modules.php: Added the meaning of the colours

2010-08-09  Sergio Martin <sergio.martin@artica.es>

	* extensions/module_groups.php: Fixed the status colors of
	the modules by groups matrix

2010-08-09  Sergio Martin <sergio.martin@artica.es>

	* extensions/agents_modules.php
	operation/agentes/agents_modules_view.php
	operation/menu.php: Moved the agents VS modules matrix from
	menu to extensions

2010-08-09  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/agents_modules_view.php
	operation/agentes/tactical.php
	operation/agentes/group_view.php
	operation/menu.php: Added the agents VS modules matrix
	and changed the color of some alert fired numbers and 
	table rows

2010-08-06  Sergio Martin <sergio.martin@artica.es>

	* include/functions_alerts.php
	godmode/alerts/alert_actions.php: Added the duplicate alert  action
	feature for pending task 3038715

2010-08-04  Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_filemanager.php: added parameter $readOnly in the
	function "file_explorer".
	
	*pandoradb.sql, extras/pandoradb_migrate_v3.1_to_v3.2.sql: added into the
	table "talert_template_modules" the column "id_policy_alerts".
	
2010-08-05  Sergio Martin <sergio.martin@artica.es>

	* operation/agentes/networkmap.php: Change the default map to topology map
