@@ -1,3 +1,8 @@
+2010-08-10  Ramon Novoa  <rnovoa@artica.es>
+
+	* godmode/setup/setup_auth.php: Added to repository. Authentication
+	  scheme setup options.
+
 010-08-10  Ramon Novoa  <rnovoa@artica.es>
 
 	* include/auth/mysql.php, include/functions_config.php,
